# libKirsch

./: CMakeLists.txt  LICENSE  README.md  meson.build
.github/: FUNDING.yml
.github/workflows/: build.yml
include/kirsch/: delegate.hpp  signal.hpp
test/: test_delegate.cpp  test_signal.cpp
